--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "patanjali-koramangala",
   "version": "0.1.0",
+  "homepage": "https://hvvijuka.github.io/kanna-Pathanjali-Retail-App",
   "private": true,
   "dependencies": {
     "autoprefixer": "^10.4.19",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
