--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "patanjali-koramangala",
   "version": "0.1.0",
   "homepage": "https://hvvijuka.github.io/kanna-Pathanjali-Retail-App",
-  "private": true,
+  "private": false,
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "axios": "^1.12.2",
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.4.5",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
